<resources>
    <string name="app_name">淘东东</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="showproductview">showProductView</string>
    <string name="confirmpassword">再次输入密码</string>
    <string name="cancel">取消</string>
    <string name="projectIcon">图标</string>
    <string name="confirm_register">确认注册</string>
    <string name="showproducticon">ShowProductIcon</string>
    <string name="productName">商品名</string>
    <string name="remaining">剩余:</string>
    <string name="purchase">购买</string>
    <string name="back">返回</string>
    <string name="unknown">unknown</string>
    <string name="modify">修改</string>
    <string name="put_on_sale">上架商品</string>
    <string name="pull_off_shelves">下架商品</string>
    <string name="upload_img">上传图片</string>
    <string name="product_unit_price">商品单价</string>
    <string name="product_amount">商品数量</string>
    <string name="product_description">商品描述</string>
    <string name="confirm_product_info">确定</string>
    <string name="confirm_recharge">确定充值</string>

</resources>
