<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RegisterPage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/projectIcon"
        app:srcCompat="@drawable/taodongdong" />

    <EditText
        android:id="@+id/reg_in_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:ems="10"
        android:hint="用户名"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="密码"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="再次输入密码"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <RadioButton
        android:id="@+id/register_as_saler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="成为卖家" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/confirm_register"
            android:textColor="#000000" />

        <Button
            android:id="@+id/cancel_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>
